--- a/login/css/style.css
+++ b/login/css/style.css
@@ -442,31 +442,31 @@ margin: 14px 0px;
     background: rgba(0, 0, 0, 0);
     border-radius: 0px;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-    background-color: rgba(241, 217, 16, 0.92);
+    background-color: #ac9e26;
 }
 
 .main-w3 {
-    width: 30%;
-		background-color: rgba(255, 255, 255, 0.68);
-		margin-top: 110px;
+		background-color: rgba(255, 255, 255, 0.55);
+		margin-top: 93px;
 }
 
 input[type=email], input[type=password] {
     border: none !important;
-    background: rgba(19, 19, 19, 0.99);
+    background: rgba(19, 19, 19, 0.9);
+		color: #fff;
 }
 
 .icons span {
-    background: rgba(241, 217, 16, 0.92);
+    background: #ac9e26;
     color: #fff;
 }
 
 .main-w3 .t-w3 {
-    color: rgba(241, 217, 16, 0.92);
+    color: #ac9e26;
 }
 
 h1 {
     padding: 4px;
-    background-color: #013243;
+    background-color: rgba(1, 50, 67, 0.74);
     font-family: none;
 }
