--- a/app/css/style.css
+++ b/app/css/style.css
@@ -35,13 +35,14 @@ ul,label{
 }
 body a:hover{
 	text-decoration:none;
+	background:#fff;
 }
 	/*sidebar navigation*/
 #sidebar {
     width:240px;
     height:100%;
     position:fixed;
-    background:rgba(52, 48, 48, 0.78);
+    background:#2e3e4e;
     -webkit-transition:all .3s ease-in-out;
     -moz-transition:all .3s ease-in-out;
     -o-transition:all .3s ease-in-out;
@@ -218,7 +219,7 @@ ul.sidebar-menu li a.active i {
     left:0;
     right:0;
     z-index:1002;
-    background:#013243;
+    background: rgba(7,55,99,1.00);
     -webkit-transition:all .3s ease-in-out;
     -moz-transition:all .3s ease-in-out;
     -o-transition:all .3s ease-in-out;
@@ -272,7 +273,7 @@ ul.top-menu {
 ul.top-menu > li > a {
     color: #fff;
     font-size: 16px;
-    background: #8b5c7e;
+    background: #2e3e4e;
     padding: 4px 8px;
     margin-right: 15px;
     border-radius: 50%;
@@ -280,7 +281,7 @@ ul.top-menu > li > a {
     padding-right: 8px !important;
 }
 ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
-    background:#fa9fa4;
+    background:#53d769;
     text-decoration:none;
     color:#fff !important;
     padding-right:8px !important;
@@ -503,8 +504,8 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
     padding: 0px;
     background: none;
     margin-right: 0;
-    border: 1px solid #8b5c7e;
-    background: #8b5c7e;
+    border: 1px solid #2e3e4e;
+    background: #2e3e4e;
 }
 .top-nav ul.top-menu>li.language>a {
     margin-top:-2px;
@@ -525,8 +526,8 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
     margin-left:10px;
 }
 .top-nav ul.top-menu>li>a:hover,.top-nav ul.top-menu>li>a:focus {
-    border:1px solid #fa9fa4;
-    background:#fa9fa4 !important;
+    border:1px solid #53d769;
+    background:#53d769 !important;
     border-radius:100px;
     -webkit-border-radius:100px;
 }
@@ -569,25 +570,29 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
     -ms-transition: all .3s ease;
     -o-transition: all .3s ease;
     transition: all .3s ease;
-    border: 1px solid #8b5c7e;
+    border: 1px solid #2e3e4e;
     box-shadow: none;
-    background: #8b5c7e url(../images/search-icon.png) no-repeat 10px 8px;
+    background: #2e3e4e url(../images/search-icon.png) no-repeat 10px 8px;
     padding: 0 5px 0 30px;
     color: #fff;
     border-radius: 100px;
     -webkit-border-radius: 100px;
 	cursor:pointer;
 }
+.search:hover {
+	background: #53d769 url(../images/search-icon.png) no-repeat 10px 8px;
+	border:1px solid #53d769;
+}
 .search:focus {
     width:180px;
-    border:1px solid #8b5c7e;
+    border:1px solid #53d769;
     box-shadow:none;
     -webkit-transition:all .3s ease;
     -moz-transition:all .3s ease;
     -ms-transition:all .3s ease;
     -o-transition:all .3s ease;
     transition:all .3s ease;
-    color:#c8c8c8;
+    color:#fff;
     font-weight: 300;
 }
 .todo-search:focus{
@@ -598,7 +603,7 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
     float:left;
     margin-top:23px;
     margin-left:-15px;
-    background:#8b5c7e;
+    background:#2e3e4e;
     border-radius:50%;
     -webkit-border-radius:50%;
     width:32px;
@@ -614,7 +619,7 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
     color:#fff;
 }
 .sidebar-toggle-box:hover {
-    background:#fa9fa4;
+    background:#53d769;
 }
 .hide-left-bar {
     margin-left:-240px !important;
