--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,22 @@
+
+.container_div {
+        width: 100vw;
+        height: 100vh;
+        background: #2e3e4e;
+	background-repeat: no-repeat;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+}
+
 /* Form */
 .form {
   position: relative;
   z-index: 1;
   background: rgba(255, 255, 255, 0.87);;
-  max-width: 300px;
-  margin: 0 auto 100px;
-  top: 80px;
-  padding: 30px;
+  max-width: 400px;
+  padding: 15px;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   border-bottom-left-radius: 3px;
@@ -15,7 +25,7 @@
 }
 .form .thumbnail {
   margin: 0 auto 30px;
-  padding: 50px 30px;
+  padding: 15px 30px;
   border-top-left-radius: 100%;
   border-top-right-radius: 100%;
   border-bottom-left-radius: 100%;
