alteracao da cor do header

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -219,7 +219,7 @@ ul.sidebar-menu li a.active i {
     left:0;
     right:0;
     z-index:1002;
-    background: rgba(7,55,99,1.00);
+    background: #2e3e4e;
     -webkit-transition:all .3s ease-in-out;
     -moz-transition:all .3s ease-in-out;
     -o-transition:all .3s ease-in-out;
