--- a/login/css/style.css
+++ b/login/css/style.css
@@ -54,9 +54,7 @@ body {
 }
 .form input {
   outline: 0;
-  background: #f2f2f2;
   width: 100%;
-  border: 0;
   margin: 0 0 15px;
   padding: 15px;
   border-top-left-radius: 3px;
@@ -66,9 +64,11 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 14px;
-  border: none !important;
-  background: rgba(19, 19, 19, 0.9);
-  color: #fff;
+
+  background: 0;
+  color: #000;
+  border: none;
+  border-bottom: 1px solid rgba(255,0,0,1.00);
 }
 .form button {
   outline: 0;
