--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3146,3 +3146,7 @@ div#graph1, div#graph4, div#graph5, div#graph6, div#graph7, div#graph8, div#grap
     padding: 0;
 }
 }
+
+.modal-reserva {
+    width: 100%;
+}
