ajustes responsividade modal reserva

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3147,6 +3147,8 @@ div#graph1, div#graph4, div#graph5, div#graph6, div#graph7, div#graph8, div#grap
 }
 }
 
-.modal-reserva {
-    width: 100%;
+@media (min-width: 768px) {
+	.modal-reserva {
+	    width: 66%;
+	}
 }
