--- a/login/css/style.css
+++ b/login/css/style.css
@@ -1,16 +1,13 @@
 body {
-  background: #fff;
-  color: #666666;
-  font-family: 'RobotoDraft', 'Roboto', sans-serif;
-  font-size: 14px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  background-image: url(../images/b1.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
+      background-image: url(../images/b1.jpg) ;
+			background-position: center center;
+			background-repeat:  no-repeat;
+			background-attachment: fixed;
+			background-size:  cover;
+			background-color: #999;
+			height: 100%;
+			margin: 0;
+  		padding: 0;
 }
 
 /* Pen Title */
