--- a/login/css/style.css
+++ b/login/css/style.css
@@ -1,474 +1,337 @@
+
 body {
-      background-image: url(../images/b1.jpg) ;
+			background-image: url(../images/b1.jpg) ;
 			background-position: center center;
 			background-repeat:  no-repeat;
 			background-attachment: fixed;
 			background-size:  cover;
-			background-color: #999;
-			height: 100%;
-			margin: 0;
-  		padding: 0;
+			margin: 0px;
 }
 
-/* Pen Title */
-.pen-title {
-  padding: 50px 0;
-  text-align: center;
-  letter-spacing: 2px;
-}
-.pen-title h1 {
-  margin: 0 0 20px;
-  font-size: 48px;
-  font-weight: 300;
-}
-.pen-title span {
-  font-size: 12px;
-}
-.pen-title span .fa {
-  color: #ed2553;
-}
-.pen-title span a {
-  color: #ed2553;
-  font-weight: 600;
-  text-decoration: none;
-}
-
-/* Rerun */
-.rerun {
-  margin: 0 0 30px;
-  text-align: center;
-}
-.rerun a {
-  cursor: pointer;
-  display: inline-block;
-  background: #ed2553;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  padding: 10px 20px;
-  color: #ffffff;
-  text-decoration: none;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-}
-.rerun a:hover {
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-
-/* Scroll To Bottom */
-#codepen, #portfolio {
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  background: #363636;
-  width: 56px;
-  height: 56px;
-  border-radius: 100%;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-  color: #ffffff;
-  text-align: center;
-}
-#codepen i, #portfolio i {
-  line-height: 56px;
-}
-#codepen:hover, #portfolio:hover {
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-/* portfolio */
-#portfolio {
-  bottom: 96px;
-  right: 36px;
-  background: #ed2553;
-  width: 44px;
-  height: 44px;
-  -webkit-animation: buttonFadeInUp 1s ease;
-  animation: buttonFadeInUp 1s ease;
-}
-#portfolio i {
-  line-height: 44px;
-}
-
-/* Container */
 .container {
-  position: relative;
-  max-width: 460px;
-  width: 100%;
-  margin: 0 auto 100px;
-}
-.container.active .card:first-child {
-  background: #f2f2f2;
-  margin: 0 15px;
-}
-.container.active .card:nth-child(2) {
-  background: #fafafa;
-  margin: 0 10px;
-}
-.container.active .card.alt {
-  top: 20px;
-  right: 0;
-  width: 100%;
-  min-width: 100%;
-  height: auto;
-  border-radius: 5px;
-  padding: 60px 0 40px;
-  overflow: hidden;
-}
-.container.active .card.alt .toggle {
-  position: absolute;
-  top: 40px;
-  right: -70px;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  -webkit-transform: scale(10);
-  transform: scale(10);
-  -webkit-transition: -webkit-transform .3s ease;
-  transition: -webkit-transform .3s ease;
-  transition: transform .3s ease;
-  transition: transform .3s ease, -webkit-transform .3s ease;
-}
-.container.active .card.alt .toggle:before {
-  content: '';
-}
-.container.active .card.alt .title,
-.container.active .card.alt .input-container,
-.container.active .card.alt .button-container {
-  left: 0;
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-}
-.container.active .card.alt .title {
-  -webkit-transition-delay: .3s;
-          transition-delay: .3s;
-}
-.container.active .card.alt .input-container {
-  -webkit-transition-delay: .4s;
-          transition-delay: .4s;
-}
-.container.active .card.alt .input-container:nth-child(2) {
-  -webkit-transition-delay: .5s;
-          transition-delay: .5s;
-}
-.container.active .card.alt .input-container:nth-child(3) {
-  -webkit-transition-delay: .6s;
-          transition-delay: .6s;
-}
-.container.active .card.alt .button-container {
-  -webkit-transition-delay: .7s;
-          transition-delay: .7s;
+		width: 100vw;
+		height: 100vh;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center
 }
 
-/* Card */
-.card {
-  position: relative;
-  background: rgba(255, 255, 255, 0.81);
-  border-radius: 5px;
-  padding: 60px 0 40px 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-  /* Title */
-  /* Inputs */
-  /* Button */
-  /* Footer */
-  /* Alt Card */
-}
-.card:first-child {
-  background: #fafafa;
-  height: 10px;
-  border-radius: 5px 5px 0 0;
-  margin: 0 10px;
-  padding: 0;
-}
-.card .title {
-  position: relative;
-  z-index: 1;
-  border-left: 5px solid #ed2553;
-  margin: 0 0 35px;
-  padding: 10px 0 10px 50px;
-  color: #ed2553;
-  font-size: 32px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-.card .input-container {
-  position: relative;
-  margin: 0 60px 50px;
-}
-.card .input-container input {
-  outline: none;
-  z-index: 1;
-  position: relative;
-  background: none;
-  width: 100%;
-  height: 60px;
-  border: 0;
-  color: #212121;
-  font-size: 24px;
-  font-weight: 400;
-}
-.card .input-container input:focus ~ label {
-  color: #9d9d9d;
-  -webkit-transform: translate(-12%, -50%) scale(0.75);
-          transform: translate(-12%, -50%) scale(0.75);
-}
-.card .input-container input:focus ~ .bar:before, .card .input-container input:focus ~ .bar:after {
-  width: 50%;
-}
-.card .input-container input:valid ~ label {
-  color: #9d9d9d;
-  -webkit-transform: translate(-12%, -50%) scale(0.75);
-          transform: translate(-12%, -50%) scale(0.75);
-}
-.card .input-container label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: #757575;
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 60px;
-  -webkit-transition: 0.2s ease;
-  transition: 0.2s ease;
-}
-.card .input-container .bar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background: #757575;
-  width: 100%;
-  height: 1px;
-}
-.card .input-container .bar:before, .card .input-container .bar:after {
-  content: '';
-  position: absolute;
-  background: #ed2553;
-  width: 0;
-  height: 2px;
-  -webkit-transition: .2s ease;
-  transition: .2s ease;
-}
-.card .input-container .bar:before {
-  left: 50%;
-}
-.card .input-container .bar:after {
-  right: 50%;
-}
-.card .button-container {
-  margin: 0 60px;
-  text-align: center;
-}
-.card .button-container a {
-  outline: 0;
-  cursor: pointer;
-  position: relative;
-  display: inline-block;
-  background: 0;
-  width: 240px;
-  border: 2px solid #e3e3e3;
-  padding: 20px 0;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 1;
-  text-transform: uppercase;
-  overflow: hidden;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-  text-decoration:none;
-}
-.card .button-container a span {
-  position: relative;
-  z-index: 1;
-  color: #ddd;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-}
-.card .button-container a:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  display: block;
-  background: #ed2553;
-  width: 30px;
-  height: 30px;
-  border-radius: 100%;
-  margin: -15px 0 0 -15px;
-  opacity: 0;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-}
-.card .button-container a:hover, .card .button-container a:active, .card .button-container a:focus {
-  border-color: #ed2553;
-}
-.card .button-container a:hover span, .card .button-container a:active span, .card .button-container a:focus span {
-  color: #ed2553;
-}
-.card .button-container a:active span, .card .button-container a:focus span {
-  color: #ffffff;
-}
-.card .button-container a:active:before, .card .button-container a:focus:before {
-  opacity: 1;
-  -webkit-transform: scale(10);
-  transform: scale(10);
-}
-.card .footer {
-  margin: 40px 0 0;
-  color: #d3d3d3;
-  font-size: 24px;
-  font-weight: 300;
-  text-align: center;
-}
-.card .footer a {
-  color: inherit;
-  text-decoration: none;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-}
-.card .footer a:hover {
-  color: #bababa;
-}
-.card.alt {
-  position: absolute;
-  top: 40px;
-  right: -70px;
-  z-index: 10;
-  width: 140px;
-  height: 140px;
-  background: none;
-  border-radius: 100%;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  padding: 0;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-  /* Toggle */
-  /* Title */
-  /* Input */
-  /* Button */
-}
-.card.alt .toggle {
-  position: relative;
-  background: #ed2553;
-  width: 140px;
-  height: 140px;
-  border-radius: 100%;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  color: #ffffff;
-  font-size: 58px;
-  line-height: 140px;
-  text-align: center;
-  cursor: pointer;
-}
-.card.alt .toggle:before {
-  content: '\f072';
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-.card.alt .title,
-.card.alt .input-container,
-.card.alt .button-container {
-  left: 100px;
-  opacity: 0;
-  visibility: hidden;
-}
-.card.alt .title {
-  position: relative;
-  border-color: #ffffff;
-  color: #ffffff;
-  font-size: 24px;
-}
-.card.alt .title .close {
-  cursor: pointer;
-  position: absolute;
-  top: -40px;
-  right: 60px;
-  display: inline;
-  color: #ffffff;
-  font-size: 58px;
-  font-weight: 400;
-}
-.card.alt .title .close:before {
-  content: '\00d7';
-}
-.card.alt .input-container input {
-  color: #ffffff;
-}
-.card.alt .input-container input:focus ~ label {
-  color: #ffffff;
-}
-.card.alt .input-container input:focus ~ .bar:before, .card.alt .input-container input:focus ~ .bar:after {
-  background: #ffffff;
-}
-.card.alt .input-container input:valid ~ label {
-  color: #ffffff;
-}
-.card.alt .input-container label {
-  color: rgba(255, 255, 255, 0.8);
-}
-.card.alt .input-container .bar {
-  background: rgba(255, 255, 255, 0.8);
-}
-.card.alt .button-container button {
-  width: 100%;
-  background: #ffffff;
-  border-color: #ffffff;
-}
-.card.alt .button-container button span {
-  color: #ed2553;
-}
-.card.alt .button-container button:hover {
-  background: rgba(255, 255, 255, 0.9);
-}
-.card.alt .button-container button:active:before, .card.alt .button-container button:focus:before {
-  display: none;
+.box {
+		width: 460px;
+		height: 600px;
+		position: relative;
+		background: rgba(255, 255, 255, 0.81);
+		border-radius: 5px;
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+		-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+		-webkit-transition: .3s ease;
+		transition: .3s ease;
 }
 
-/* Keyframes */
-@-webkit-keyframes buttonFadeInUp {
-  0% {
-    bottom: 30px;
-    opacity: 0;
-  }
-}
-@keyframes buttonFadeInUp {
-  0% {
-    bottom: 30px;
-    opacity: 0;
-  }
-}
+	.box .top {
+		width: 100%;
+		border-left: 5px solid #ed2553;
+		border-radius: 100%;
+		margin-top: 40px;
+		margin-bottom: 40px;
+	}
 
-/* Logo */
-.card .thumbnail {
-    margin: 0 auto 30px;
-    padding: 15px 30px;
-    border-top-left-radius: 100%;
-    border-top-right-radius: 100%;
-    border-bottom-left-radius: 100%;
-    border-bottom-right-radius: 100%;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.card .thumbnail img {
-    display: block;
+	.box .top .logo {
+		background-image: url(../images/logo.png);
+		background-repeat:  no-repeat;
+		background-size:  cover;
     width: 290px;
     height: 117px;
-}
+		margin: 0 0 0 30px;
+	}
+
+	.box .form {
+
+	}
+
+	.box .form .input-container {
+	  position: relative;
+	  margin: 0 60px 50px;
+	}
+	.box .form .input-container input {
+	  outline: none;
+	  z-index: 1;
+	  position: relative;
+	  background: none;
+	  width: 100%;
+	  height: 60px;
+	  border: 0;
+	  color: #212121;
+	  font-size: 24px;
+	  font-weight: 400;
+	}
+	.box .form .input-container input:focus ~ label {
+	  color: #9d9d9d;
+	  -webkit-transform: translate(-12%, -50%) scale(0.75);
+	          transform: translate(-12%, -50%) scale(0.75);
+	}
+	.box .form .input-container input:focus ~ .bar:before, .box .form .input-container input:focus ~ .bar:after {
+	  width: 50%;
+	}
+	.box .form .input-container input:valid ~ label {
+	  color: #9d9d9d;
+	  -webkit-transform: translate(-12%, -50%) scale(0.75);
+	          transform: translate(-12%, -50%) scale(0.75);
+	}
+	.box .form .input-container label {
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  color: #757575;
+	  font-size: 18px;
+	  font-weight: 300;
+	  line-height: 60px;
+	  -webkit-transition: 0.2s ease;
+	  transition: 0.2s ease;
+	}
+	.box .form .input-container .bar {
+	  position: absolute;
+	  left: 0;
+	  bottom: 0;
+	  background: #757575;
+	  width: 100%;
+	  height: 1px;
+	}
+	.box .form .input-container .bar:before, .box .form .input-container .bar:after {
+	  content: '';
+	  position: absolute;
+	  background: #ed2553;
+	  width: 0;
+	  height: 2px;
+	  -webkit-transition: .2s ease;
+	  transition: .2s ease;
+	}
+	.box .form .input-container .bar:before {
+	  left: 50%;
+	}
+	.box .form .input-container .bar:after {
+	  right: 50%;
+	}
+	.box .form .button-container {
+	  margin: 0 0;
+	  text-align: center;
+	}
+	.box .form .button-container a {
+	  outline: 0;
+	  cursor: pointer;
+	  position: relative;
+	  display: inline-block;
+	  background: 0;
+	  width: 240px;
+	  border: 2px solid #e3e3e3;
+	  padding: 20px 0;
+	  font-size: 18px;
+	  font-weight: 600;
+	  line-height: 1;
+	  text-transform: uppercase;
+	  overflow: hidden;
+	  -webkit-transition: .3s ease;
+	  transition: .3s ease;
+	  text-decoration:none;
+	}
+	.box .form .button-container a span {
+	  position: relative;
+	  z-index: 1;
+	  color: #ddd;
+	  -webkit-transition: .3s ease;
+	  transition: .3s ease;
+	}
+	.box .form .button-container a:before {
+	  content: '';
+	  position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  display: block;
+	  background: #ed2553;
+	  width: 30px;
+	  height: 30px;
+	  border-radius: 100%;
+	  margin: -15px 0 0 -15px;
+	  opacity: 0;
+	  -webkit-transition: .3s ease;
+	  transition: .3s ease;
+	}
+	.box .form .button-container a:hover, .box .form .button-container a:active, .box .form .button-container a:focus {
+	  border-color: #ed2553;
+	}
+	.box .form .button-container a:hover span, .box .form .button-container a:active span, .box .form .button-container a:focus span {
+	  color: #ed2553;
+	}
+	.box .form .button-container a:active span, .box .form .button-container a:focus span {
+	  color: #ffffff;
+	}
+	.box .form .button-container a:active:before, .box .form .button-container a:focus:before {
+	  opacity: 1;
+	  -webkit-transform: scale(10);
+	  transform: scale(10);
+	}
+	.box .form .footer {
+	  margin: 40px 0 0;
+	  color: #d3d3d3;
+	  font-size: 18px;
+	  font-weight: 300;
+	  text-align: center;
+	}
+	.box .form .footer a {
+	  color: inherit;
+	  text-decoration: none;
+	  -webkit-transition: .3s ease;
+	  transition: .3s ease;
+	}
+	.box .form .footer a:hover {
+	  color: #bababa;
+	}
+
+	/* default styles here for older browsers.
+		 I tend to go for a 600px - 960px width max but using percentages
+	*/
+	@media only screen and (min-width:960px){
+			/* styles for browsers larger than 960px; */
+			.box {
+				width: 460px;
+				height: 600px;
+			}
+	}
+	@media only screen and (min-width:1440px){
+			/* styles for browsers larger than 1440px; */
+			.box {
+				width: 460px;
+				height: 600px;
+			}
+	}
+	@media only screen and (min-width:2000px){
+			/* for sumo sized (mac) screens */
+			.box {
+				width: 460px;
+				height: 600px;
+			}
+	}
+	@media only screen and (max-device-width:480px) and (orientation:portrait) {
+		 /* styles for mobile browsers smaller than 480px; (iPhone) */
+		 .box {
+			width: 300px;
+			height: 460px;
+		 }
+
+		 .box .top {
+			 margin-top: 0px;
+	 		 margin-bottom: 0px;
+		 }
+
+		 .box .top .logo {
+	     background-size: 200px auto;
+			 background-position: left center;
+	 	}
+
+		.box .form .footer {
+			margin: 5px 0 0;
+		}
+	}
+
+	@media only screen and (max-device-width:640px) and (orientation:landscape) {
+		 /* styles for mobile browsers smaller than 480px; (iPhone) */
+		 .box {
+			width: 300px;
+			height: 460px;
+		 }
+
+		 .box .top {
+			 margin-top: 0px;
+	 		 margin-bottom: 0px;
+		 }
+
+		 .box .top .logo {
+	     background-size: 200px auto;
+			 background-position: left center;
+	     height: 80px;
+	 	}
+
+
+		.box .form .input-container {
+		    margin: 0 30px 10px;
+		}
+
+		.box .form .footer {
+			margin: 5px 0 0;
+		}
+	}
+
+	@media only screen and (device-width:768px){
+		 /* default iPad screens */
+		 .box {
+			width: 460px;
+			height: 600px;
+		 }
+	}
+	/* different techniques for iPad screening */
+	@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+		/* For portrait layouts only */
+		.box {
+			width: 460px;
+			height: 600px;
+		}
+	}
+
+	@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+		/* For landscape layouts only */
+		.box {
+			width: 460px;
+			height: 600px;
+		}
+	}
+
+	@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation:portrait) {
+		/* For iPhone 6  portrait*/
+		.box {
+			width: 340px;
+			height: 600px;
+		}
+	}
+
+	@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation:landscape) {
+		/* For iPhone 6  landscape*/
+		.box {
+			width: 600px;
+			height: 340px;
+		}
+
+		.box .top {
+			margin-top: 0px;
+			margin-bottom: 0px;
+		}
+
+		.box .top .logo {
+			background-size: 200px auto;
+			background-position: left center;
+			height: 80px;
+	 }
+
+
+	 .box .form .input-container {
+			 margin: 0 30px 10px;
+	 }
+
+	 .box .form .footer {
+		 margin: 5px 0 0;
+	 }
+
+	}
+
+	@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation:landscape) {
+		/* For iPhone 5  landscape*/
+		.box {
+			width: 440px;
+			height: 300px;
+		}
+		.box .form .button-container a {
+			padding: 10px 0;
+		}
+	}
